--- a/Identify_Obj_Positions_startingpoint.ipynb
+++ b/Identify_Obj_Positions_startingpoint.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "openai_env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -143,7 +143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.19"
   },
   "orig_nbformat": 4
  },
