--- a/VLM_Basics.ipynb
+++ b/VLM_Basics.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,9 +48,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This image depicts a lively city street scene with a blend of activities and people. In the foreground, there are six\n",
+      "people: one young person is sitting on the ground engaged with a smartphone or tablet, another person is lying down on\n",
+      "the pavement, and four others are seated on or standing near a park bench—two of whom are reading a newspaper or a book,\n",
+      "while another appears deep in thought. Several pigeons are scattered on the ground nearby.  In the midground, a\n",
+      "motorcyclist and a person riding a scooter are crossing the street on a pedestrian crossing. A man is walking while\n",
+      "playing a guitar. There are also multiple cars, including a taxi, in motion on the road.  The background features tall\n",
+      "buildings, some with glass facades reflecting the light, and an older-style church or historic building with a steeple.\n",
+      "The overall lighting suggests it may be late afternoon or early evening, with a warm, golden hue illuminating the scene.\n",
+      "Traffic signals and street elements complete the urban setting.\n"
+     ]
+    }
+   ],
    "source": [
     "#basic call to gpt with prompt and image\n",
     "\n",
@@ -96,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,9 +164,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'description'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43moutput\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mdescription\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mforeground\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'description'"
+     ]
+    }
+   ],
    "source": [
     "output[\"description\"][\"foreground\"]"
    ]
