--- a/VLM_Basics.ipynb
+++ b/VLM_Basics.ipynb
@@ -164,23 +164,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'description'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43moutput\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mdescription\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mforeground\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'description'"
-     ]
+     "data": {
+      "text/plain": [
+       "{'crosswalk': 'Wide zebra crossing with white stripes',\n",
+       " 'vehicles': [{'type': 'Taxi',\n",
+       "   'color': 'White',\n",
+       "   'motion': 'Blurred, indicating movement',\n",
+       "   'location': 'Left side of the crosswalk'},\n",
+       "  {'type': 'SUV',\n",
+       "   'color': 'Gray',\n",
+       "   'motion': 'Moving',\n",
+       "   'location': 'Behind the taxi'},\n",
+       "  {'type': 'Sedan',\n",
+       "   'color': 'Orange',\n",
+       "   'motion': 'Moving',\n",
+       "   'location': 'Center of the street'}],\n",
+       " 'motorcycles': [{'rider': 'Wearing a black jacket and white helmet',\n",
+       "   'motion': 'Moving across the crosswalk'},\n",
+       "  {'rider': 'Wearing a helmet and casual clothes',\n",
+       "   'vehicle': 'Scooter',\n",
+       "   'motion': 'Moving behind the guitarist'}]}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "output[\"description\"][\"foreground\"]"
+    "list(output.keys())\n",
+    "\n",
+    "output[\"background\"]\n",
+    "output[\"street\"]"
    ]
   },
   {
@@ -197,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,9 +305,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'position': 'sitting on the ground near a flower pot',\n",
+       "  'age': 16,\n",
+       "  'activity': 'using a smartphone',\n",
+       "  'gender': 'male'},\n",
+       " {'position': 'lying on the ground',\n",
+       "  'age': 18,\n",
+       "  'activity': 'resting or sleeping',\n",
+       "  'gender': 'male'},\n",
+       " {'position': 'sitting on a bench',\n",
+       "  'age': 65,\n",
+       "  'activity': 'thinking or resting',\n",
+       "  'gender': 'male'},\n",
+       " {'position': 'sitting on a bench',\n",
+       "  'age': 25,\n",
+       "  'activity': 'reading a newspaper',\n",
+       "  'gender': 'female'},\n",
+       " {'position': 'walking on the sidewalk near the bench',\n",
+       "  'age': 20,\n",
+       "  'activity': 'using a smartphone',\n",
+       "  'gender': 'female'},\n",
+       " {'position': 'riding a motorcycle in the street',\n",
+       "  'age': 30,\n",
+       "  'activity': 'driving',\n",
+       "  'gender': 'male'},\n",
+       " {'position': 'walking in the street playing guitar',\n",
+       "  'age': 28,\n",
+       "  'activity': 'playing guitar',\n",
+       "  'gender': 'male'},\n",
+       " {'position': 'riding a scooter in the street',\n",
+       "  'age': 27,\n",
+       "  'activity': 'driving',\n",
+       "  'gender': 'female'},\n",
+       " {'position': 'walking on the sidewalk in the background',\n",
+       "  'age': 30,\n",
+       "  'activity': 'walking',\n",
+       "  'gender': 'female'},\n",
+       " {'position': 'walking on the sidewalk in the background',\n",
+       "  'age': 30,\n",
+       "  'activity': 'walking',\n",
+       "  'gender': 'female'},\n",
+       " {'position': 'walking on the sidewalk in the background',\n",
+       "  'age': 30,\n",
+       "  'activity': 'walking',\n",
+       "  'gender': 'female'}]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "output_image_extraction[\"people\"]"
    ]
@@ -345,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,9 +433,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No one appears to be in immediate danger based on the scene. The person lying on the ground (18 years old) seems to be\n",
+      "resting or sleeping, not showing signs of distress. No hospital alert is necessary. If any medical attention is needed\n",
+      "later, a normal hospital would be appropriate, as there are no children requiring a child hospital.\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "completion = openAIclient.chat.completions.create(\n",
@@ -382,9 +465,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The youngest person in the list is a 16-year-old male sitting on the ground near a flower pot using a smartphone. In the\n",
+      "image, he appears to be the young man on the bottom left holding a phone or tablet.  The approximate coordinates of this\n",
+      "person in the normalized [ymin, xmin, ymax, xmax] format relative to 1000x1000 are: [740, 200, 950, 360]\n"
+     ]
+    }
+   ],
    "source": [
     "completion = openAIclient.chat.completions.create(\n",
     "    model=\"gpt-4.1-mini\",\n",
@@ -431,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,9 +553,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It's like a computer that learns from lots of examples, just as you learn from experience. It then uses what it's\n",
+      "learned to help make smart decisions, recognize things, or solve problems, almost like a very clever assistant.\n"
+     ]
+    }
+   ],
    "source": [
     "response = client.models.generate_content(\n",
     "    model=\"gemini-2.5-flash\", contents=\"Explain how AI works to a 90 years old. in few words\"\n",
@@ -480,9 +582,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This detailed urban scene depicts a bustling city street bathed in the warm, golden light of either sunrise or sunset,\n",
+      "casting long shadows and illuminating the architecture with a soft glow.  **Overall Setting:** The image captures a wide\n",
+      "street with a prominent zebra crosswalk in the foreground. Tall, modern skyscrapers with reflective glass facades\n",
+      "dominate the background on the left, contrasting with older, red-brick buildings on both sides of the street. A\n",
+      "distinctive church steeple with a pointed spire rises amidst the buildings in the mid-ground, adding character to the\n",
+      "skyline.  **Left Side - Mid-ground:** *   A classic **red-brick building** with multiple windows, some arched on the\n",
+      "lower levels, stands prominently. Below it, several shops feature dark green awnings and brightly lit display windows,\n",
+      "suggesting active businesses. *   **Vehicular traffic** is in motion across the crosswalk, depicted with a sense of\n",
+      "speed through motion blur.     *   A **silver car**, possibly a taxi given a faint yellow sign on its roof, is centrally\n",
+      "positioned on the crosswalk, moving from left to right.     *   Behind it, a **gold or orange SUV** is also in motion.\n",
+      "*   Further back, a darker colored SUV is visible, possibly parked or moving slower. *   Several **people are crossing\n",
+      "the street**:     *   A **motorcyclist** in full black leather gear and a white helmet is riding a vintage-style\n",
+      "motorcycle from left to right across the crosswalk.     *   A man dressed in dark clothing and a hat, carrying an\n",
+      "**acoustic guitar**, walks from left to right, seemingly strumming or holding the guitar by its neck.     *   To his\n",
+      "right, a woman on a **scooter or moped** with a light-colored helmet is also crossing the street.  **Right Side -\n",
+      "Foreground & Mid-ground:** *   A sturdy **wooden park bench** with dark metal frames is placed on the sidewalk.     *\n",
+      "An **older man** with gray hair, wearing glasses and a dark suit, sits thoughtfully on the left side of the bench,\n",
+      "resting his chin on his hand.     *   Beside him, a **blonde woman** in a reddish-orange striped top and blue jeans is\n",
+      "engrossed in reading a newspaper or book. *   Further along the sidewalk, a **young woman** with long dark hair, wearing\n",
+      "a pink t-shirt, denim shorts, and sneakers, walks away from the viewer while holding a small white plate or tray. *\n",
+      "Scattered across the sidewalk, especially near the bench and the crosswalk, are several **pigeons**, some pecking at the\n",
+      "ground, others standing. *   A large **wooden planter pot** filled with vibrant red and orange flowers (possibly\n",
+      "geraniums) sits on the curb next to the crosswalk. *   A **traffic light** hangs overhead with what appears to be yellow\n",
+      "or orange lights illuminated, suggesting caution or an impending change.  **Foreground - Left Side:** *   Closest to the\n",
+      "viewer on the left side of the crosswalk, a **young man** with short dark hair, wearing a green jacket and shorts, is\n",
+      "sitting cross-legged on the sidewalk, looking down at a tablet or phone in his hands. *   Adjacent to him, another\n",
+      "**young man** in a red hoodie and blue jeans is lying completely flat on his back on the sidewalk, appearing relaxed\n",
+      "with his eyes closed, looking upwards.  **Atmosphere:** The scene blends the dynamic energy of a busy city with moments\n",
+      "of tranquility. The golden light gives the entire image a warm, slightly nostalgic, and picturesque quality, despite the\n",
+      "modern urban elements. The diverse activities of the people – commuting, busking, relaxing, reading, and even lounging –\n",
+      "create a vivid tapestry of city life.\n"
+     ]
+    }
+   ],
    "source": [
     "im = Image.open(img)\n",
     "\n",
