--- a/VLM_Basics.ipynb
+++ b/VLM_Basics.ipynb
@@ -164,33 +164,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'crosswalk': 'Wide zebra crossing with white stripes',\n",
-       " 'vehicles': [{'type': 'Taxi',\n",
-       "   'color': 'White',\n",
-       "   'motion': 'Blurred, indicating movement',\n",
-       "   'location': 'Left side of the crosswalk'},\n",
-       "  {'type': 'SUV',\n",
-       "   'color': 'Gray',\n",
-       "   'motion': 'Moving',\n",
-       "   'location': 'Behind the taxi'},\n",
-       "  {'type': 'Sedan',\n",
-       "   'color': 'Orange',\n",
-       "   'motion': 'Moving',\n",
-       "   'location': 'Center of the street'}],\n",
-       " 'motorcycles': [{'rider': 'Wearing a black jacket and white helmet',\n",
-       "   'motion': 'Moving across the crosswalk'},\n",
-       "  {'rider': 'Wearing a helmet and casual clothes',\n",
-       "   'vehicle': 'Scooter',\n",
-       "   'motion': 'Moving behind the guitarist'}]}"
+       "({'buildings': [{'style': 'Modern skyscrapers',\n",
+       "    'material': 'Glass and steel',\n",
+       "    'location': 'Far background'},\n",
+       "   {'style': 'Older brick buildings',\n",
+       "    'material': 'Brick',\n",
+       "    'location': 'Midground on the left and right sides'},\n",
+       "   {'style': 'Historic church-like building',\n",
+       "    'features': 'Steeple with a pointed roof',\n",
+       "    'location': 'Center background'}],\n",
+       "  'traffic_lights': {'color': 'Yellow',\n",
+       "   'position': 'Above the street on the right side'},\n",
+       "  'trees': 'Green trees lining the street in the background'},\n",
+       " {'crosswalk': 'Wide zebra crossing with white stripes',\n",
+       "  'vehicles': [{'type': 'Taxi',\n",
+       "    'color': 'White',\n",
+       "    'motion': 'Blurred, indicating movement',\n",
+       "    'location': 'Left side of the crosswalk'},\n",
+       "   {'type': 'SUV',\n",
+       "    'color': 'Gray',\n",
+       "    'motion': 'Moving',\n",
+       "    'location': 'Behind the taxi'},\n",
+       "   {'type': 'Sedan',\n",
+       "    'color': 'Orange',\n",
+       "    'motion': 'Moving',\n",
+       "    'location': 'Center of the street'}],\n",
+       "  'motorcycles': [{'rider': 'Wearing a black jacket and white helmet',\n",
+       "    'motion': 'Moving across the crosswalk'},\n",
+       "   {'rider': 'Wearing a helmet and casual clothes',\n",
+       "    'vehicle': 'Scooter',\n",
+       "    'motion': 'Moving behind the guitarist'}]})"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,8 +210,7 @@
    "source": [
     "list(output.keys())\n",
     "\n",
-    "output[\"background\"]\n",
-    "output[\"street\"]"
+    "output[\"background\"], output[\"street\"]"
    ]
   },
   {
@@ -642,9 +653,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"location\": \"A bustling city street intersection\",\n",
+      "  \"time_of_day\": \"Late afternoon or early evening, characterized by golden hour lighting and long shadows\",\n",
+      "  \"overall_mood\": \"Lively and dynamic, showcasing urban life with a mix of activities and people\",\n",
+      "  \"main_elements\": [\n",
+      "    \"people\",\n",
+      "    \"vehicles\",\n",
+      "    \"animals\",\n",
+      "    \"buildings\",\n",
+      "    \"street_furniture\",\n",
+      "    \"natural_elements\",\n",
+      "    \"other_details\"\n",
+      "  ],\n",
+      "  \"people\": [\n",
+      "    \"An older man with white hair and glasses, wearing a dark suit and white shirt, sitting contemplatively on a wooden bench on the right side of the pavement.\",\n",
+      "    \"A blonde woman, wearing a red and white striped shirt and blue jeans, sitting next to the older man on the bench, reading a newspaper.\",\n",
+      "    \"A young woman with long dark hair, wearing a pink t-shirt and light blue denim shorts, walking casually on the right pavement, holding a small white object.\",\n",
+      "    \"A man wearing a black leather jacket, black pants, and a white helmet, riding a motorcycle across the striped crosswalk in the mid-ground.\",\n",
+      "    \"A man wearing a dark jacket and hat, walking across the crosswalk while holding and playing an acoustic guitar.\",\n",
+      "    \"A woman wearing a dark jacket and helmet, riding a light-colored scooter on the far side of the crosswalk.\",\n",
+      "    \"A young boy or man with short brown hair, wearing an olive green jacket and grey shorts, sitting cross-legged on the left pavement, looking down at a tablet or phone.\",\n",
+      "    \"A young man with short brown hair, wearing a red hoodie and blue jeans, lying on his back on the pavement in the foreground, looking upwards.\"\n",
+      "  ],\n",
+      "  \"vehicles\": [\n",
+      "    \"A silver sedan (possibly a taxi with a blurred yellow sign on top) with motion blur, moving from left to right across the crosswalk.\",\n",
+      "    \"A grey SUV visible behind the silver sedan, moving in the opposite direction.\",\n",
+      "    \"An orange or tan sedan with motion blur, located behind the motorcycle, moving from left to right.\",\n",
+      "    \"A light-colored sedan (possibly light grey or beige) parked or slowly moving on the right side of the street.\",\n",
+      "    \"A dark-colored motorcycle being ridden by a man in a helmet.\",\n",
+      "    \"A light-colored (white or silver) scooter being ridden by a woman in a helmet.\"\n",
+      "  ],\n",
+      "  \"animals\": [\n",
+      "    \"Approximately eight to ten pigeons scattered on the pavement near the bench, the potted plant, and the people lying and sitting on the ground.\"\n",
+      "  ],\n",
+      "  \"buildings\": [\n",
+      "    \"Several multi-story brick buildings with numerous windows on the left side, some featuring green awnings over ground-level shops.\",\n",
+      "    \"Numerous modern skyscrapers, tall glass and concrete structures, forming a dense city skyline in the background and center.\",\n",
+      "    \"A distinctive dark-colored building with a spire, resembling a church or old institutional building, visible in the mid-background among the modern skyscrapers.\"\n",
+      "  ],\n",
+      "  \"street_furniture\": [\n",
+      "    \"A long wooden slatted bench with a dark metal frame, situated on the right side of the pavement, occupied by two people.\",\n",
+      "    \"A traffic light pole with three vertical yellow/orange lights, positioned on the right side of the street.\",\n",
+      "    \"Various street light poles are visible throughout the scene.\",\n",
+      "    \"A large wooden barrel-shaped pot filled with red geranium-like flowers, located on the left side of the pavement near the sitting boy.\"\n",
+      "  ],\n",
+      "  \"natural_elements\": [\n",
+      "    \"Several green trees are interspersed among the buildings in the mid-ground, providing patches of foliage.\",\n",
+      "    \"Red flowers blooming in the wooden pot on the pavement.\"\n",
+      "  ],\n",
+      "  \"other_details\": [\n",
+      "    \"A prominent black and white striped crosswalk extends across the street in the foreground and mid-ground.\",\n",
+      "    \"Concrete pavement lines both sides of the street, accommodating pedestrians and street furniture.\",\n",
+      "    \"An asphalt road constitutes the main thoroughfare, with visible tire marks and reflections from the sun.\"\n",
+      "  ]\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "json_schema = {\n",
     "                    \"name\": \"img_extract\",\n",
@@ -731,9 +804,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'box_2d': [468, 597, 687, 725]}\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = \"Identify the youngest in the picture and give me back their coordinates. The box_2d should be [ymin, xmin, ymax, xmax] normalized to 0-1000.\"\n",
     "\n",
@@ -779,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -819,9 +900,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"doctor_name\": \"Dr. Markus Müller\",\n",
+      "  \"doctor_title\": \"Arzt\",\n",
+      "  \"patient_name\": \"Claudle Fischer\",\n",
+      "  \"patient_dob\": \"1. 4. 1978\",\n",
+      "  \"patient_gender\": \"f\",\n",
+      "  \"medication_name\": \"Ibuprofen\",\n",
+      "  \"medication_dosage\": \"3x 400mg\",\n",
+      "  \"medication_instructions\": \"nach dem Essen\",\n",
+      "  \"signature\": \"Kopfmüller\"\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "im = Image.open(\"images/prescription1.jpg\")\n",
     "\n",
@@ -854,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -888,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -897,9 +996,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'doctor_name': 'Dr. Markus Müller',\n",
+       " 'doctor_title': 'Arzt',\n",
+       " 'patient_name': 'Claudle Fischer',\n",
+       " 'patient_dob': '1. 4. 1978',\n",
+       " 'patient_gender': 'f',\n",
+       " 'medication_name': 'Ibuprofen',\n",
+       " 'medication_dosage': '3x 400mg',\n",
+       " 'medication_instructions': 'nach dem Essen',\n",
+       " 'signature': 'Kopfmüller'}"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "json.loads(response.text)"
    ]
@@ -913,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -944,9 +1062,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"doctor_name\":\"Dr. Markus Müller\",\"patient_name\":\"Claudia Fischer\",\"patient_dob\":\"1.4.1978\",\"meds\":[{\"name\":\"Ibuprofen\",\"dose\":\"400 mg\",\"frequency\":\"3x\",\"instructions\":\"nach dem Essen\"}],\"signature\":true}'"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "returnValue"
    ]
@@ -962,9 +1091,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'doctor_name': 'Dr. Markus Müller', 'patient_name': 'Claudia Fischer', 'patient_dob': '1.4.1978', 'meds': [{'name': 'Ibuprofen', 'dose': '400 mg', 'frequency': '3x', 'instructions': 'nach dem Essen'}], 'signature': True}\n"
+     ]
+    }
+   ],
    "source": [
     "print(json.loads(returnValue))"
    ]
